--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
         <!--image2-->
         <div class="image2">
             <div class="container">
+                <div>
             <img  class="img2 rec20" src="images/Rectangle 20 (1).png" alt="">
             </div>
-        </div>
-        <div class="image2">
-            <div class="container">
-            <img  class="img2 rec21" src="images/Rectangle 21.png" alt="">
+            <div>
+                <img  class="img2 rec21" src="images/Rectangle 21.png" alt="">
             </div>
         </div>
+       
         <!--last section-->
     <section class="last">
         <div class="container">
@@ -179,7 +179,33 @@
     </section>
 
         <!--footer-->
-        <footer class="footer">
+          <!--footer-->
+          <footer class="footer">
+            <div class="container"> 
+                <a class="line2"></a>
+                <div class="idea"> 
+                    <h4>Got an idea?</h4>
+                </div>
+                      <aside class="aside"> 
+                        <p class="talk">Let's talk about it</p>
+                    <div class="media handles">
+                        <p>Instagram</p>
+                        <p>Youtube</p>
+                        <p>Dribble</p>
+                        <p>Linked~In</p>
+                        <p>Medium</p>
+                        <p>Behance</p>
+                        <p>Twitter</p>
+                        <p>Codepen</p>
+                    </div>
+                    <a class="line1"></a>
+                  </aside> 
+                    <div class="lastF">     
+                       <img class= "chats msg" src="https://img.icons8.com/ios-filled/50/000000/speech-bubble-with-dots.png"/>
+                     </div>
+            </div>
+            </footer>
+        <!-- <footer class="footer">
         <div class="container">
             <div class="my-idea">
                 
@@ -209,7 +235,7 @@
                 </image>
                 </div>
         </div>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
